--- a/apps/frontend/src/app/pages/checkin/updateCheckinDialog/update-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/updateCheckinDialog/update-checkin-dialog.component.html
@@ -107,13 +107,11 @@
 
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Location</mat-label>
-      <input
-        #location
-        type="text"
-        formControlName="location"
-        matInput
-        placeholder="LR1"
-      />
+      <mat-select [(value)]="data.location" formControlName="location">
+        <mat-option *ngFor="let location of luggageLocation" [value]="location">
+          {{ location }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="form.get('location')?.invalid && form.get('location')?.dirty"
       >
