--- a/apps/frontend/src/app/pages/checkout/updateCheckoutDialog/update-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/updateCheckoutDialog/update-checkout-dialog.component.html
@@ -106,13 +106,11 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Location</mat-label>
-      <input
-        #location
-        type="text"
-        formControlName="location"
-        matInput
-        placeholder="LR1"
-      />
+      <mat-select [(value)]="data.location" formControlName="location">
+        <mat-option *ngFor="let location of luggageLocation" [value]="location">
+          {{ location }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           updateCheckoutForm.get('location')?.invalid &&
