--- a/apps/frontend/src/app/pages/cars/updateCarEntryDialog/update-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/updateCarEntryDialog/update-car-dialog.component.html
@@ -277,13 +277,11 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Location</mat-label>
-      <input
-        #location
-        type="text"
-        formControlName="location"
-        matInput
-        placeholder="Front of hotel"
-      />
+      <mat-select [(value)]="data.location" formControlName="location">
+        <mat-option *ngFor="let location of carLocation" [value]="location">
+          {{ location }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           updateCarForm.get('location')?.invalid &&
