Added Assignment Task selecet to assignment page

--- a/apps/frontend/src/app/pages/assignments/createAssignmentDialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/createAssignmentDialog/create-assignment-dialog.component.html
@@ -28,13 +28,11 @@
 
     <mat-form-field appearance="fill" autocomplete="off">
       <mat-label>Task</mat-label>
-      <input
-        #task
-        type="text"
-        formControlName="task"
-        matInput
-        placeholder="RA"
-      />
+      <mat-select formControlName="task">
+        <mat-option *ngFor="let task of bbAssignmentTask" [value]="task">
+          {{ task }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           createAssignmentForm.get('task')?.invalid &&
