--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -29,13 +29,11 @@
 
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Task</mat-label>
-      <input
-        #task
-        type="text"
-        formControlName="task"
-        matInput
-        placeholder="RA"
-      />
+      <mat-select [(value)]="data.task" formControlName="task">
+        <mat-option *ngFor="let task of bbAssignmentTask" [value]="task">
+          {{ task }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           updateAssignmentForm.get('task')?.invalid &&
