--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -67,13 +67,11 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Received by</mat-label>
-      <input
-        #receivedBy
-        type="text"
-        formControlName="receivedBy"
-        matInput
-        placeholder="FV"
-      />
+      <mat-select [(value)]="data.receivedBy" formControlName="receivedBy">
+        <mat-option *ngFor="let receivedBy of bbAssignmentReceivedBy" [value]="receivedBy">
+          {{ receivedBy }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           updateAssignmentForm.get('receivedBy')?.invalid &&
