Added bike reserved by select to bike page

--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -68,7 +68,10 @@
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Received by</mat-label>
       <mat-select [(value)]="data.receivedBy" formControlName="receivedBy">
-        <mat-option *ngFor="let receivedBy of bbAssignmentReceivedBy" [value]="receivedBy">
+        <mat-option
+          *ngFor="let receivedBy of bbAssignmentReceivedBy"
+          [value]="receivedBy"
+        >
           {{ receivedBy }}
         </mat-option>
       </mat-select>
