--- a/apps/frontend/src/app/pages/bikes/createBikeEntryDialog/create-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/createBikeEntryDialog/create-bike-dialog.component.html
@@ -45,13 +45,14 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Reserved by</mat-label>
-      <input
-        #reservedBy
-        type="text"
-        formControlName="reservedBy"
-        matInput
-        placeholder="Guest"
-      />
+      <mat-select formControlName="reservedBy">
+        <mat-option
+          *ngFor="let reservedBy of bikeListReserved"
+          [value]="reservedBy"
+        >
+          {{ reservedBy }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           createBikeForm.get('reservedBy')?.invalid &&
