--- a/apps/frontend/src/assets/styles/table.scss
+++ b/apps/frontend/src/assets/styles/table.scss
@@ -128,3 +128,11 @@ mat-icon {
     font-size: 20px;
   }
 }
+
+.table-spinner-full-size {
+  min-height: 10vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
