--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -50,7 +50,7 @@
   <hr />
 
   <div class="table-height">
-    <table mat-table [dataSource]="filteredLuggage">
+    <table mat-table [dataSource]="filteredLuggage" *ngIf="!isLoading">
       <ng-container matColumnDef="dateIn">
         <th mat-header-cell *matHeaderCellDef>Date in</th>
         <td mat-cell *matCellDef="let luggage">
@@ -139,5 +139,9 @@
         data-cy="long-term-list-entry"
       ></tr>
     </table>
+
+    <div class="table-spinner-full-size" *ngIf="isLoading">
+      <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
+    </div>
   </div>
 </main>
