--- a/apps/frontend/src/app/pages/checkout/checkout.component.html
+++ b/apps/frontend/src/app/pages/checkout/checkout.component.html
@@ -46,7 +46,7 @@
   <hr />
 
   <div class="table-height">
-    <table mat-table [dataSource]="checkoutLuggage">
+    <table mat-table [dataSource]="checkoutLuggage" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
         <td mat-cell *matCellDef="let item">{{ item.room }}</td>
@@ -102,5 +102,9 @@
         (click)="openCheckoutEditDialog(row)"
       ></tr>
     </table>
+
+    <div class="table-spinner-full-size" *ngIf="isLoading">
+      <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
+    </div>
   </div>
 </main>
