--- a/apps/frontend/src/app/pages/bikes/bikes.component.html
+++ b/apps/frontend/src/app/pages/bikes/bikes.component.html
@@ -51,7 +51,7 @@
   <hr />
 
   <div class="table-height">
-    <table mat-table [dataSource]="filteredBikeList">
+    <table mat-table [dataSource]="filteredBikeList" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
         <td
@@ -166,5 +166,9 @@
         *matRowDef="let row; columns: bikeColumns"
       ></tr>
     </table>
+
+    <div class="table-spinner-full-size" *ngIf="isLoading">
+      <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
+    </div>
   </div>
 </main>
