Created dashboard-links component

--- a/apps/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
 <h1>Welcome to Omnihost Systems</h1>
 <frontend-weather-widget></frontend-weather-widget>
 <frontend-dashboard-document-section></frontend-dashboard-document-section>
+<frontend-dashboard-links></frontend-dashboard-links>
